--- a/stylesheets/components/forms/_forms.scss
+++ b/stylesheets/components/forms/_forms.scss
@@ -13,31 +13,40 @@
   display: block;
   line-height: 1;
   color: $text_color;
-}
 
-fieldset {
-  border: 0 none;
-  padding: 0;
-  margin: 0;
-}
-
-.control_group {
-  padding: 5px 8px;
-  position: relative;
-  white-space: nowrap;
-
-  .label {
-    width: $left_column_width;
-    float: left;
-    text-align: right;
+  .control_group {
+    padding: 5px 8px;
     position: relative;
-    padding: 0;
+    white-space: nowrap;
+
+    .label {
+      width: $left_column_width;
+      float: left;
+      text-align: right;
+      position: relative;
+      padding: 0;
+    }
+
+    .input {
+      margin-left: $left_column_width;
+      position: relative;
+      min-height: 2.5em;
+    }
   }
 
-  .input {
-    margin-left: $left_column_width;
-    position: relative;
-    min-height: 2.5em;
+  fieldset {
+    border: 1px solid $fieldset_border_color;
+    @include border-radius(5px);
+    padding: 0;
+    margin: 0 0 10px;
+    background: $fieldset_background_color;
+
+    legend {
+      margin-left: 10px;
+      padding: 3px 5px;
+      color: $fieldset_text_color;
+      @include background(linear-gradient(rgba(white, 1), rgba(white, 0) 90%));
+    }
   }
 }
 
