--- a/app/assets/stylesheets/alchemy/components/forms/_forms_responsive.scss
+++ b/app/assets/stylesheets/alchemy/components/forms/_forms_responsive.scss
@@ -136,6 +136,22 @@
         }
       }
     }
+
+    .double_input {
+      & > .label {
+        margin-bottom: 5px;
+      }
+
+      &.error,
+      &.warning,
+      &.success {
+        .message {
+          position: relative;
+          left: 0;
+          top: 0;
+        }
+      }
+    }
   }
 }
 
