--- a/app/assets/stylesheets/alchemy/components/forms/_forms_vars.scss
+++ b/app/assets/stylesheets/alchemy/components/forms/_forms_vars.scss
@@ -2,6 +2,7 @@
 $left_column_width: 200px;
 $input_width: 280px !default;
 $input_padding: 10px;
+$second_label_width: 60px;
 
 // colors
 $light_border_color: lighten($border_color, 10%);
